# mch2022-firmware-esp32

main/: CMakeLists.txt  audio.c  audio_sample.h  eeprom_test.c  fpga.h  fpga_download.c  fpga_util.c  main.c  menu.c  wallpaper.h
main/include/: audio.h  fpga_util.h  menu.h
resources/: boot.snd
